force-app/main/default/objects/Campaign/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <inlineHelpText>Determines the email address Canon Emails will send the email from for the campaign. This email address must already be confirmed in your integration</inlineHelpText>
    <label>From Email</label>
    <type>Email</type>
</CustomField>