force-app/main/default/objects/Campaign/fields/From_Id__c.field-meta.xml
<CustomField>
    <fullName>From_Id__c</fullName>
    <inlineHelpText>The Id of the object controlling who the email should come from.</inlineHelpText>
    <label>From Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>