force-app/main/default/objects/Campaign/fields/Last_Canon_Email_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Canon_Email_Sync__c</fullName>
    <inlineHelpText>Used to tell when the last successful sync occured</inlineHelpText>
    <label>Last Canon Email Sync</label>
    <type>DateTime</type>
</CustomField>