force-app/main/default/objects/Campaign/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <inlineHelpText>The email design template id to use, whether from Salesforce or another provider</inlineHelpText>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>