force-app/main/default/objects/Campaign/fields/Template_Provider__c.field-meta.xml
<CustomField>
    <fullName>Template_Provider__c</fullName>
    <inlineHelpText>Used to decide where the email template will come from. This field and the template Id determine your email design.</inlineHelpText>
    <label>Template Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sendgrid</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>